# mssql-2019-for-django-1.11

./: README.md  setup.cfg
pyodbc/: base.py
