[metadata]name = mssql-2019-for-django-1.11
version = 0.0.1
author = Michael Gutierrez
author_email = se_lain@yahoo.com
description = Add SQL 2019 support for Django 1.11.x
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/megamanx00/mssql-2019-for-django-1.11
project_urls = https://github.com/megamanx00/mssql-2019-for-django-1.11
Bug Tracker = https://github.com/megamanx00/mssql-2019-for-django-1.11/issues =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent[options]
package_dir =
= srcpackages = find:
python_requires = >=3.5
